# pivot-format-graphdb

./: .gitignore  README.md  VisTest.ipynb  config.yml  pyproject.toml  tei_base_text.xml  vis_test.gexf
app/: __init__.py  __main__.py  constants.py  database.py
app/builder/: edges.py  nodes.py
app/cli/: main.py
app/cli/graph/: __init__.py  build_gexf.py
app/cli/heurist/: heurist_download.py
app/cli/pivot/: __init__.py  texts.py
app/cli/pivot_commands/: texts.py
app/cli/refresh_db_commands/: __init__.py  heurist_download.py
app/data_models/: __init__.py  base.py  date.py  digitization.py  document.py  genre.py  pages.py  part.py  person.py  physdesc.py  place.py  repository.py  scripta.py  story.py  storyverse.py  term.py  text.py  witness.py
app/graph/: __init__.py  builders.py
app/graph/edges/: __init__.py  has_genre.py  has_language.py  has_parent_genre.py  is_expression_of.py  is_manifestation_of.py  is_modeled_on.py  is_part_of_storyverse.py
app/graph/nodes/: __init__.py  genre.py  story.py  storyverse.py  term.py  text.py  witness.py
app/models/: __init__.py  base.py  builder.py  builders.py  date.py  digitization.py  document.py  genre.py  pages.py  part.py  person.py  physdesc.py  place.py  repository.py  scripta.py  story.py  storyverse.py  term.py  terms.py  text.py  witness.py
app/models/edges/: __init__.py  has_language.py  is_expression_of.py  is_modeled_on.py  is_part_of_storyverse.py
app/models/nodes/: __init__.py  story.py  storyverse.py  term.py  text.py
app/tei/: find_node.py  text_builder.py  text_xml_parser.py
app/tei/branches/: __init__.py  respStmt.py  titleStmt.py
app/tei/fetchers/: language.py  text_alternative_titles.py  text_title.py
app/tei/text/: __init__.py  base_tree.py  builder.py  (+1 more)
app/utils/: write_gexf.py
config/: __init__.py  contributors.yml
src/: __main__.py  __version__.py  text-tei.xml  witness-tei.xml
src/backend/: constants.py  database.py  models.py
src/etl/: database.py  extract.py
tests/: database_test.py  textCollections.json
tests/integration/: __init__.py  build_edge_test.py  encoding_desc_builder_test.py  get_text_test.py  kuzu_build_test.py  title_stmt_builder_test.py  witness_tree_test.py
tests/mock_data/: README.md  __init__.py  constants.py  make_mock_data.py  text.py  text_data_model.json  text_record.json
tests/unit/: genre_model_test.py  nested_genre_test.py  parse_base_tree_test.py  struct_data_type_test.py
(+48 files in other folders)
