[build-system]
requires = ["setuptools>=62", "setuptools_scm>8"]
build-backend = "setuptools.build_meta"

[project]
name = "lostma"
dependencies = [
    "annotated-types==0.7.0",
    "click==8.1.8",
    "duckdb==1.1.3",
    "ghp-import==2.1.0",
    "iniconfig==2.0.0",
    "Jinja2==3.1.5",
    "Markdown==3.7",
    "MarkupSafe==3.0.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "neo4j==5.27.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "pydantic==2.10.4",
    "pydantic_core==2.27.2",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "pyyaml_env_tag==0.1",
    "six==1.17.0",
    "typing_extensions==4.12.2",
    "watchdog==6.0.0"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.VERSION"}

[tool.setuptools_scm]
# Leave empty for the dynamic version metadata

[project.scripts]
lostma = "src.__main__:cli"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "-v -ra -q --doctest-modules"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
# Specify a custom directory for pytest cache
cache_dir = ".pytest_cache"