[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lostma-tei"
dependencies = [
    "lxml>=5.3.1",
    "heurist @ git+ssh://git@github.com/LostMa-ERC/heurist-etl-pipeline",
    "pyyaml>=6.0.2"
]
dynamic = ["version"]
requires-python = ">=3.12"
description = ""

[project.optional-dependencies]
dev = ["black>=24.1.0", "isort>=5.13.0", "pytest"]

[project.scripts]
lostma-tei = "app.cli.main:cli"

[tool.hatch]

[tool.hatch.version]
path = "app/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app/", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests", "app"]
addopts = "-v -ra -q --doctest-modules"
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
# Specify a custom directory for pytest cache
cache_dir = ".pytest_cache"
